<resources>
    <string name="app_name">OneMoreSecret</string>
    <string name="action_private_keys">Private Keys</string>
    <string name="qr_fragment_label">Scan QR Code Sequence</string>
    <string name="message_fragment_label">Decrypted Message</string>
    <string name="prompt_info_title">Authorization required</string>
    <string name="prompt_info_subtitle">Requested key: %s</string>
    <string name="prompt_info_description">We need to verify your identity to access the key data</string>
    <string name="hidden_text">(hidden text)</string>
    <string name="remaining_codes">Remaining Codes:</string>
    <string name="save">Save</string>
    <string name="passphrase">Passphrase</string>
    <string name="bluetooth_target">Bluetooth Target:</string>
    <string name="bluetooth_targets">Bluetooth Targets</string>
    <string name="unsupported">unsupported</string>
    <string name="keyboard_layout">Keyboard Layout:</string>
    <string name="type">Type</string>
    <string name="make_this_device_discoverable">Make this device discoverable</string>
    <string name="keyboard_layouts">Keyboard Layouts</string>
    <string name="unknown_decrypt_first">(unknown, decrypt first)</string>
    <string name="key_alias">Key Alias</string>
    <string name="transport_passphrase_required">Transport Passphrase (required)</string>
    <string name="decrypt">Decrypt</string>
    <string name="fingerprint">Fingerprint:</string>
    <string name="bt_not_available">not available</string>
    <string name="bt_off">off</string>
    <string name="bt_disconnected">disconnected</string>
    <string name="bt_connected">connected</string>
    <string name="select_bt_target">Select BT target</string>
    <string name="wrong_keyboard_layout">Wrong keyboard layout?</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="no_key_found">No key found: %s</string>
    <string name="wrong_application">wrong applicationId: %s</string>
    <string name="insufficient_permissions">Insufficient permissions</string>
    <string name="delay">delay</string>
    <string name="typing_please_wait">typing, please wait&#8230;</string>
    <string name="share_public_key_title">%s - Public Key</string>
    <string name="warning_alias_exists">Warning: this alias is already assigned to a key with fingerprint …%s. It will be overwritten.</string>
    <string name="warning_same_fingerprint">Warning: key \'%s\' has the same fingerprint. It will be deleted.</string>
    <string name="key_deleted">Key \'%s\' deleted.</string>
    <string name="ok_to_delete">OK to delete \'%s\'?</string>
    <string name="delete_private_key">Delete Private Key</string>
    <string name="delete_key">Delete Key</string>
    <string name="dummy_text">dummy text</string>
    <string name="key_icon">Key Icon</string>
    <string name="error_message">Error: %s</string>
    <string name="error_starting_camera">\"Error starting camera: %s \"</string>
    <string name="help">Help</string>
    <string name="biometrics_unavailable">Biometrics unavailable</string>
    <string name="biometrics_not_enabled">Biometrics not enabled</string>
    <string name="biometrics_not_detected">Biometrics not detected</string>
    <string name="open_settings">Open Settings</string>
    <string name="exit">Exit</string>
    <string name="biometrics_unavailable_long_text">Looks like your biometric hardware is not available right now. Try again later.</string>
    <string name="biometrics_not_detected_long_text">Sorry, we cannot continue without biometric hardware.</string>
    <string name="biometrics_not_enabled_long_text">Please set up biometric authentication on your device.</string>
    <string name="readme_url">https://github.com/stud0709/OneMoreSecret/blob/master/README.md</string>
    <string name="key_successfully_activated">Key successfully activated</string>
    <string name="new_private_key">New Private Key</string>
    <string name="private_key_import">Private Key Import</string>
    <string name="backup_file">%s: Backup File</string>
    <string name="key_alias_may_not_be_empty">Key Alias may not be empty</string>
    <string name="key_alias_already_exists">Key alias already exists</string>
    <string name="password_too_short">Password shorter than 10 symbols</string>
    <string name="password_mismatch">Both password fields should match</string>
    <string name="visibility">Visibility</string>
    <string name="chip_upper_case">A…Z</string>
    <string name="chip_lower_case">a…z</string>
    <string name="chip_numbers">0…9</string>
    <string name="chip_specials">!%&amp;#…</string>
    <string name="chip_similar">Similar</string>
    <string name="chip_layout">Layout</string>
    <string name="password">Password</string>
    <string name="password_generator">Password Generator</string>
    <string name="generate">Generate</string>
    <string name="upper_case">Upper Case…</string>
    <string name="lower_case">Lower Case…</string>
    <string name="digits">Digits…</string>
    <string name="specials">Specials…</string>
    <string name="similar">Similar…</string>
    <string name="encrypt_with">Encrypt With:</string>
    <string name="share">Share</string>
    <string name="decrypted_message">Decrypted Message</string>
    <string name="auth_successful">Authentication was successful</string>
    <string name="cannot_apply_layout_filter">Cannot apply layout filter - no layout selected</string>
    <string name="no_symbols_available">No symbols available, check settings</string>
    <string name="unprotected_password">Unprotected Password</string>
    <string name="encrypted_password">Encrypted Password</string>
    <string name="project_home_page">Project Home Page</string>
    <string name="qr_scanner_md_url">https://github.com/stud0709/OneMoreSecret/blob/master/qr_scanner.md</string>
    <string name="pwd_generator_md_url">https://github.com/stud0709/OneMoreSecret/blob/master/password_generator.md</string>
    <string name="totp_import_md_url">https://github.com/stud0709/OneMoreSecret/blob/master/totp_import.md</string>
    <string name="encrypt_text_md_url">https://github.com/stud0709/OneMoreSecret/blob/master/encrypt_text.md</string>
    <string name="autotype_md_url">https://github.com/stud0709/OneMoreSecret/blob/master/autotype.md</string>
    <string name="key_management_md_url">https://github.com/stud0709/OneMoreSecret/blob/master/key_management.md</string>
    <string name="decrypted_message_md_url">https://github.com/stud0709/OneMoreSecret/blob/master/decrypted_message.md</string>
    <string name="key_import_md_url">https://github.com/stud0709/OneMoreSecret/blob/master/key_import.md</string>
    <string name="new_private_key_md_url">https://github.com/stud0709/OneMoreSecret/blob/master/new_private_key.md</string>
    <string name="crypto_address_generator_url">https://github.com/stud0709/OneMoreSecret/blob/master/crypto_address_generator.md</string>
    <string name="pin_setup_md_url">https://github.com/stud0709/OneMoreSecret/blob/master/pin_setup.md</string>
    <string name="encrypt_file_md_url">https://github.com/stud0709/OneMoreSecret/blob/master/encrypt_file.md</string>
    <string name="help_auto_type">Help (Auto-Type)</string>
    <string name="activate_private_key">activate</string>
    <string name="private_key_consent">I have SAVED the backup file and REMEMBERED the password. I understand, that this is the ONLY way to restore my private key.</string>
    <string name="create">Create</string>
    <string name="repeat_transport_password">Repeat Transport Password</string>
    <string name="new_transport_password">New Transport Password</string>
    <string name="new_key_alias">New Key Alias</string>
    <string name="oms_crash_report">OneMoreSecret Crash Report</string>
    <string name="disclaimer_crash_report">OneMoreSecret has detected an unexpected error and needs to close. To help us diagnose and fix the problem, you can send us a crash report. The report contains:</string>
    <string name="chk_stack_trace">Stack trace (a list of the method calls that the application was in the middle of when an Exception was thrown)</string>
    <string name="chk_device_info">Device information (device model, software version etc.)</string>
    <string name="chk_logcat">logcat output (a journal containing hints about the program execution).</string>
    <string name="btn_dismiss">dismiss</string>
    <string name="btn_send">send</string>
    <string name="contact_email">stud0709.github@gmail.com</string>
    <string name="feedback_prompt">Please provide your feedback…</string>
    <string name="malformed_intent">Malformed intent</string>
    <string name="app_version">app-version</string>
    <string name="permissions1">To be fully functional, OneMoreSecret will request the following permissions from your device:</string>
    <string name="permission_text_camera_access">Access the camera to read QR codes</string>
    <string name="permission_text_discoverable_BT">Make your device discoverable to other Bluetooth devices (This will allow you to pair your phone as a virtual keyboard with your PC)</string>
    <string name="permission_text_communicate_BT">Communicate with already paired Bluetooth devices (for the virtual keyboard to work)</string>
    <string name="permissions2">With incomplete permissions, OneMoreSecret will only have limited functionality. You can adjust permissions at any time from the App settings of your device.</string>
    <string name="proceed">Proceed</string>
    <string name="encrypt_text">Encrypt Text</string>
    <string name="discord_url">https://discord.gg/eBH6U6XqMC</string>
    <string name="feedback_by_email">Feedback by Email</string>
    <string name="feedback_on_discord">Discord Channel</string>
    <string name="one_time_password">One-Time Password</string>
    <string name="format_seconds">%ds</string>
    <string name="time_based_otp">Time Based OTP</string>
    <string name="totp_label">Label</string>
    <string name="totp_secret">Secret</string>
    <string name="totp_parameters_optional">Parameters (optional):</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_keys">DELETE ALL KEYS after</string>
    <string name="panic_pin_descr">Panic PIN - this will IMMEDIATELY DELETE ALL KEYS and then unlock the application:</string>
    <string name="panic_pin">Panic PIN</string>
    <string name="max_attempts">failed attempts</string>
    <string name="request_pin_entry_every">Request PIN entry every</string>
    <string name="advanced_optional_settings">Advanced (Optional) Settings:</string>
    <string name="minutes">minutes</string>
    <string name="pin">PIN</string>
    <string name="enable_pin_protection">Enable PIN protection</string>
    <string name="repeat_panic_pin">repeat Panic PIN</string>
    <string name="repeat_pin">repeat PIN</string>
    <string name="totp_manual_entry">TOTP Manual Entry</string>
    <string name="totp_import">TOTP Import</string>
    <string name="app_permissions">App Permissions</string>
    <string name="private_keys">Private Keys</string>
    <string name="pin_setup">PIN Setup</string>
    <string name="please_enter_your_pin">Please enter your PIN</string>
    <string name="operation_failed_s">Operation failed: %s</string>
    <string name="authentication_failed_s">Authentication failed: %s</string>
    <string name="pin_preferences_saved">PIN preferences saved</string>
    <string name="panic_pin_should_not_match_pin">Dude, Panic PIN should not match PIN!</string>
    <string name="panic">Panic</string>
    <string name="pin_accepted">PIN accepted</string>
    <string name="wrong_pin">wrong PIN</string>
    <string name="locked">Locked</string>
    <string name="enable_pin_first">Please enable PIN first</string>
    <string name="phrase_to_encrypt">Phrase to encrypt</string>
    <string name="filename">Filename:</string>
    <string name="encrypt">Encrypt</string>
</resources>