<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MessageFragment">

    <TextView
        android:id="@+id/lblBluetoothTarget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bluetooth_target"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessage" />

    <Spinner
        android:id="@+id/spinnerBluetoothTarget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bluetooth_targets"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBluetoothTarget" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/imgButtonDiscoverable"
            style="@style/Widget.App.Button.IconOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/make_this_device_discoverable"
            android:enabled="false"
            app:icon="@drawable/ic_baseline_bluetooth_discovering_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerBluetoothTarget" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipBtStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:clickable="false"
            android:text="@string/unsupported"
            app:chipIcon="@drawable/ic_baseline_bluetooth_24"
            app:chipIconTint="@color/mtrl_chip_close_icon_tint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerBluetoothTarget" />

        <Switch
            android:id="@+id/swDelayedStrokes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:checked="false"
            android:minHeight="48dp"
            android:text="@string/delayed_strokes" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblKeyboardLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/keyboard_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgButtonDiscoverable" />

    <Spinner
        android:id="@+id/spinnerKeyboardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/keyboard_layouts"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblKeyboardLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:enabled="false"
            android:text="@string/type"
            app:icon="@drawable/ic_baseline_keyboard_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerKeyboardLayout" />

    </LinearLayout>

    <TextView
        android:id="@+id/textTyping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/typing_please_wait"
        android:visibility="visible" />

</LinearLayout>