<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pinSetupLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PinSetupFragment">

    <EditText
        android:id="@+id/edit_text_panic_pin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="7"
        android:hint="@string/panic_pin"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <CheckBox
        android:id="@+id/chkEnablePin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_pin_protection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextRepeatPin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="7"
        android:hint="@string/repeat_pin"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/editTextPin"
        app:layout_constraintTop_toBottomOf="@+id/chkEnablePin" />

    <EditText
        android:id="@+id/editTextRepeatPanicPin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="7"
        android:hint="@string/repeat_panic_pin"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/edit_text_panic_pin"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <EditText
        android:id="@+id/editTextPin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="7"
        android:hint="@string/pin"
        android:inputType="numberPassword"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkEnablePin" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_pin_entry_every"
        app:layout_constraintBottom_toBottomOf="@+id/editTextRequestInterval"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/editTextRequestInterval" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/minutes"
        app:layout_constraintBottom_toBottomOf="@+id/editTextRequestInterval"
        app:layout_constraintStart_toEndOf="@+id/editTextRequestInterval"
        app:layout_constraintTop_toTopOf="@+id/editTextRequestInterval" />

    <EditText
        android:id="@+id/editTextRequestInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="3"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/editTextFailedAttempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="3"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/editTextRequestInterval" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_all_keys"
        app:layout_constraintBottom_toBottomOf="@+id/editTextFailedAttempts"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/editTextFailedAttempts" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/failed_attempts"
        app:layout_constraintBottom_toBottomOf="@+id/editTextFailedAttempts"
        app:layout_constraintStart_toEndOf="@+id/editTextFailedAttempts"
        app:layout_constraintTop_toTopOf="@+id/editTextFailedAttempts" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/advanced_optional_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRepeatPin" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/panic_pin_descr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFailedAttempts" />

    <ImageView
        android:id="@+id/imgViewPinMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/baseline_cancel_24"
        app:layout_constraintBottom_toBottomOf="@+id/editTextRepeatPin"
        app:layout_constraintStart_toEndOf="@+id/editTextRepeatPin"
        app:layout_constraintTop_toTopOf="@+id/editTextRepeatPin" />

    <ImageView
        android:id="@+id/imgViewPanicMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/baseline_cancel_24"
        app:layout_constraintBottom_toBottomOf="@+id/editTextRepeatPanicPin"
        app:layout_constraintStart_toEndOf="@+id/editTextRepeatPanicPin"
        app:layout_constraintTop_toTopOf="@+id/editTextRepeatPanicPin" />

    <Button
        android:id="@+id/btnSavePinSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>